--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ body {
 }
 
 .chat-header {
-    background-color: #3498db;
+    background-color: pink;
     color: #fff;
     padding: 15px;
     display: flex;
